# Storchenkamera

./: LICENSE  README.md
Backend/: .pdm-python  README.md  pyproject.toml
Backend/src/storchenkamerabackend/: main.py
