[project]
name = "StorchenkameraBackend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Samuel Ruckli", email = "privat@samuelruckli.ch"},
]
dependencies = [
    "fastapi>=0.110.2",
    "uvicorn[standard]>=0.29.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
